# oram

./: .gitignore  README.md  commands.md  pyproject.toml
apps/macos/Assets/: AppIcon.icns
apps/macos/Sources/ORAMApp/App/: ORAMApp.swift
apps/macos/Sources/ORAMApp/Models/: Models.swift
apps/macos/Sources/ORAMApp/Services/: DaemonClient.swift  DaemonManager.swift
apps/macos/Sources/ORAMApp/Stores/: AppStore.swift
apps/macos/Sources/ORAMApp/Views/: ContentView.swift
apps/macos/script/: build_and_run.sh
docs/app/: macos.md
docs/architecture/: daw-plugin-architecture.md  local-engine-boundary.md
plugins/oram-plugin/: CMakeLists.txt  README.md
plugins/oram-plugin/Source/: OramAudioCore.cpp  OramAudioCore.h  OramDaemonClient.cpp  OramDaemonClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/oram-plugin/scripts/: build.sh  install_debug_macos.sh  package_macos.sh  validate_macos.sh
releases/macos/: checksums.txt
src/oram/: __init__.py  app.py
src/oram/agent/: llm_adapter.py
src/oram/audio/: engine.py  layer.py  realtime.py
src/oram/command/: grammar.py  keyboard.py  router.py  schemas.py
src/oram/ears/: mix_context.py  musical_features.py  prompt_compiler.py  routes.py
src/oram/engines/: capabilities.py  elevenlabs.py  local_runner.py  router.py  stable_audio.py
src/oram/gateway/: music.py  router.py  scribe.py  sfx.py  voice.py
src/oram/stt/: elevenlabs.py
src/oram/tui/: app.py
src/oram/web/: server.py
src/oram/web/static/: app.js  index.html  style.css
src/oram_daemon/: metadata.py  server.py
src/oram_security/: credentials.py
tests/: test_command_parser.py  test_daemon_api.py  test_engine_registry.py  test_engine_router.py  test_engine_sprints.py  test_gateways.py  test_layer_state.py  test_router_behavior.py  test_v2_parser.py  test_web_api.py
