[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oram"
version = "2.0.0"
description = "agentic recorder, looper, and sampler — recursive listening instrument"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "sounddevice>=0.4",
    "numpy>=1.24",
    "soundfile>=0.12",
    "scipy>=1.11",
    "rich>=13.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
stt = [
    "openai-whisper>=20231117",
]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
]
midi = [
    "python-rtmidi>=1.5",
]

[project.scripts]
oram = "oram.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oram", "src/oram_daemon", "src/oram_security", "src/oram_library"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]  # allow short var names like 'l' for layer in audio code

[tool.pytest.ini_options]
testpaths = ["tests"]
